# syno-uploader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  opencv_client.cpp
include/: image.hpp
src/: image.cpp
